--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cli": "^1.0.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
-    "sequelize": "^5.8.12"
+    "sequelize": "^5.22.3",
+    "sequelize-cli": "^6.2.0"
   }
 }
