--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cli": "^1.0.1",
+    "cloudinary": "^1.22.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
@@ -25,6 +26,7 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
